--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
-    "axios": "^1.4.0"
+    "airtable": "^0.12.1",
+    "axios": "^1.4.0",
+    "sweetalert2": "^11.7.21"
   }
 }
