--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "airtable": "^0.12.1",
     "axios": "^1.4.0",
+    "gsap": "^3.12.5",
     "sweetalert2": "^11.6.13"
   }
 }
